--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -113,6 +113,7 @@
             urlSaveAddresses: '@Url.Action("SaveAddresses", "ApiAddress")',
             urlGetAddressContent: '@Url.Action("GetAddressContent", "ApiAddress")',
             urlUploadAddressFiles: '@Url.Action("UploadAddressFiles", "ApiAddress")',
+            urlVerifyAddress: '@Url.Action("VerifyAddress", "ApiAddress")',
             urlGetTags: '@Url.Action("GetTags", "ApiTag")',
             urlSaveTags: '@Url.Action("SaveTags", "ApiTag")',
 
