--- a/FindMe.Web.Bo/wwwroot/css/app/exceptions.css
+++ b/FindMe.Web.Bo/wwwroot/css/app/exceptions.css
@@ -22,3 +22,7 @@
         font-weight: bold;
         text-align: center;
     }
+
+#exceptionsVw .table-container {
+    padding: 25px 10px 5px 10px;
+}
