--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -114,6 +114,7 @@
             urlGetAddressContent: '@Url.Action("GetAddressContent", "ApiAddress")',
             urlUploadAddressFiles: '@Url.Action("UploadAddressFiles", "ApiAddress")',
             urlVerifyAddress: '@Url.Action("VerifyAddress", "ApiAddress")',
+            urlGenerateAddressFile: '@Url.Action("GenerateAddressFile", "ApiAddress")',
             urlGetTags: '@Url.Action("GetTags", "ApiTag")',
             urlSaveTags: '@Url.Action("SaveTags", "ApiTag")',
 
