--- a/FindMe.Web.Bo/wwwroot/Views/App/Exceptions.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Exceptions.html
@@ -43,7 +43,7 @@
             <tr>
                 <td class="findme-color-fc-pink">
                     <span>{{vm.appProps.lbl_Pg}}: {{vm.currentPgNmbr + 1}} {{vm.appProps.lbl_of}} {{vm.totalPgs}}</span>
-                    &nbsp;&nbsp;<b>{{vm.appProps.lbl_TtlRows}}: {{vm.addrExceptionsCount}}</b>
+                    &nbsp;&nbsp;<b>{{vm.appProps.lbl_TtlRows}}: {{vm.addrExceptions.length}}</b>
                 </td>
             </tr>
             <tr>
@@ -62,7 +62,7 @@
 
 
         <div class="main-table-container">
-            <table class="table table-striped table-hover data" ng-init="vm.populateTags()">
+            <table class="table table-striped table-hover data">
                 <thead>
                     <tr>
                         <td></td>
@@ -85,7 +85,9 @@
                                 <span ng-class="addrEx.showMsgs ? 'fa fa-minus' : 'fa fa-plus'"></span>
                             </button>
                         </td>
-                        <td></td>
+                        <td>
+                            <span class="fa fa-refresh fa-spin findme-color-fc-green" ng-show="addrEx.isGeneneratingThumbnail"></span>
+                        </td>
                         <td>
                             <b>{{addrEx.name}}</b>
                         </td>
@@ -98,7 +100,9 @@
                     </tr>
 
                     <tr ng-show="addrEx.showMsgs" ng-repeat="data in addrEx.data">
-                        <td></td>
+                        <td>
+                            <span class="fa fa-refresh fa-spin findme-color-fc-green" ng-show="data.isGeneneratingThumbnail"></span>
+                        </td>
                         <td colspan="4">
                             <p>
                                 <b>{{data.msg}}</b>
