--- a/FindMe.Web.Bo/wwwroot/css/site.css
+++ b/FindMe.Web.Bo/wwwroot/css/site.css
@@ -87,6 +87,10 @@ textarea {
     max-width: 280px;
 }
 
+    textarea.no-max-width {
+        max-width: none;
+    }
+
 .cursor-pointer {
     cursor: pointer;
 }
