--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -260,6 +260,7 @@
             msg_HideHrs: ('@Html.GetMessage("msg_HideHrs")').encodeHtml(),
             msg_LkngExptnsTime: ('@Html.GetMessage("msg_LkngExptnsTime")').encodeHtml(),
             msg_ExAddrVrfd: ('@Html.GetMessage("msg_ExAddrVrfd")').encodeHtml(),
+            msg_FldReq: ('@Html.GetMessage("msg_FldReq")').encodeHtml(),
 
             msg_AddCty: ('@Html.GetMessage("msg_AddCty")').encodeHtml(),
             msg_RfrshCtys: ('@Html.GetMessage("msg_RfrshCtys")').encodeHtml(),
@@ -293,6 +294,8 @@
 
         <script src="~/js/accentFold.js" swp-cache-version="true"></script>
         <script src="~/js/app/mainCtrlr.js" swp-cache-version="true"></script>
+        <script src="~/js/app/services/miscToolsService.js" swp-cache-version="true"></script>
+        <script src="~/js/app/services/listItemService.js" swp-cache-version="true"></script>
         <script src="~/js/app/homeCtrlr.js" swp-cache-version="true"></script>
         <script src="~/js/app/account/profileCtrlr.js" swp-cache-version="true"></script>
         <script src="~/js/app/usersCtrlr.js" swp-cache-version="true"></script>
@@ -320,6 +323,8 @@
 
         <script src="~/js/accentFold.min.js" swp-cache-version="true"></script>
         <script src="~/js/app/mainCtrlr.min.js" swp-cache-version="true"></script>
+        <script src="~/js/app/services/miscToolsService.min.js" swp-cache-version="true"></script>
+        <script src="~/js/app/services/listItemService.min.js" swp-cache-version="true"></script>
         <script src="~/js/app/homeCtrlr.min.js" swp-cache-version="true"></script>
         <script src="~/js/app/account/profileCtrlr.min.js" swp-cache-version="true"></script>
         <script src="~/js/app/usersCtrlr.min.js" swp-cache-version="true"></script>
