--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -212,6 +212,10 @@
             lbl_InputHr: ('@Html.GetLabel("lbl_InputHr")').encodeHtml(),
             lbl_GetExptns: ('@Html.GetLabel("lbl_GetExptns")').encodeHtml(),
             lbl_Warning: ('@Html.GetLabel("lbl_Warning")').encodeHtml(),
+            lbl_Ftrds: ('@Html.GetLabel("lbl_Ftrds")').encodeHtml(),
+            lbl_Type: ('@Html.GetLabel("lbl_Type")').encodeHtml(),
+            lbl_HmPg: ('@Html.GetLabel("lbl_HmPg")').encodeHtml(),
+            lbl_MenuAndSrchLstSide: ('@Html.GetLabel("lbl_MenuAndSrchLstSide")').encodeHtml(),
 
             lbl_Import: ('@Html.GetLabel("lbl_Import")').encodeHtml(),
             lbl_BrowseCsvAddrFile: ('@Html.GetLabel("lbl_BrowseCsvAddrFile")').encodeHtml(),
